Lan question 1 and 2

--- a/IEOR120-Homework1.ipynb
+++ b/IEOR120-Homework1.ipynb
@@ -40,14 +40,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3fbbd211",
+   "metadata": {},
+   "source": [
+    "You are a shareholder in an **C corporation**. The corporation earns $\\$2.09$ per share before taxes. Once it has paid taxes it will distribute the rest of its earnings to you as a dividend.\n",
+    "The corporate tax rate is $25\\%$ and the personal tax rate (on both dividend and non-dividend) is $20\\%$. How much is left for you **after all taxes are paid?**\n",
+    "1. How much remains for you per share? (Round to the nearest cent)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "2adfa607",
+   "execution_count": null,
+   "id": "a4f62905",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "answer_q1 = ...\n",
+    "answer_q1"
    ]
   },
   {
@@ -59,14 +69,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d023dfea",
+   "metadata": {},
+   "source": [
+    "Corporate managers work for the owners of the corporation. Consequently, they should make decisions that are in the interests of the owners,rather than in their own interests. What strategies are available to shareholders to help ensure that managers are motivated to act\n",
+    "this way? Assign the variable `q2` to a list of all of the below statements that are true.\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "A. Mount hostile takeovers\n",
+    "<br>\n",
+    "B. Write contracts that ensure that the interests of the managers and shareholders are closely aligned\n",
+    "<br>\n",
+    "C. Ensure that employees are paid with company stock and/or stock options\n",
+    "<br>\n",
+    "D. Ensure that under-performing managers are fired\n",
+    "<br>\n",
+    "E. Ensure that employees are paid a percentage of the company’s net income\n",
+    "\n",
+    "    \n",
+    "**Note:** Your answer should look like `q2 = ['A', 'B']`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3cc0340b",
+   "execution_count": null,
+   "id": "de2820da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q2 = "
    ]
   },
   {
