--- a/IEOR120-Homework1.ipynb
+++ b/IEOR120-Homework1.ipynb
@@ -45,19 +45,30 @@
    "metadata": {},
    "source": [
     "You are a shareholder in an **C corporation**. The corporation earns $\\$2.09$ per share before taxes. Once it has paid taxes it will distribute the rest of its earnings to you as a dividend.\n",
-    "The corporate tax rate is $25\\%$ and the personal tax rate (on both dividend and non-dividend) is $20\\%$. How much is left for you **after all taxes are paid?**\n",
+    "The corporate tax rate is $25\\%$ and the personal tax rate (on both dividend and non-dividend) is $20\\%$. How much is left for you **after all taxes are paid?** Assign `q1` to your answer.\n",
     "1. How much remains for you per share? (Round to the nearest cent)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a4f62905",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "answer_q1 = ...\n",
-    "answer_q1"
+    "q1 = ...\n",
+    "q1"
    ]
   },
   {
