--- a/IEOR120-Homework1.ipynb
+++ b/IEOR120-Homework1.ipynb
@@ -110,7 +110,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q2 = "
+    "q2 = ...\n",
+    "q2"
    ]
   },
   {
@@ -118,7 +119,35 @@
    "id": "f12f48e2",
    "metadata": {},
    "source": [
-    "### Problem 3"
+    "### Problem 3\n",
+    "Find online the annual 10-K report for Costco Wholesale Corporation **(COST)** for August 29, 2021. Answer the following questions from the balance sheet:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee46ad34",
+   "metadata": {},
+   "source": [
+    "(a) How much cash did Costco have at the end of the fiscal year?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7045cd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q3a = ...\n",
+    "q3a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0e1c450",
+   "metadata": {},
+   "source": [
+    "(b) What were Costco’s total assets?"
    ]
   },
   {
@@ -128,8 +157,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q3b = ...\n",
+    "q3b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c61be45",
+   "metadata": {},
+   "source": [
+    "(c) What were Costco’s total liabilities?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d35dbb3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q3c = ...\n",
+    "q3c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88ca171c",
+   "metadata": {},
+   "source": [
+    "(d) How much long-term debt did Costco have?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f32a0bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q3d = ...\n",
+    "q3d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "040e5317",
+   "metadata": {},
+   "source": [
+    "(e) What was the book value of Costco equity?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39eeaced",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q3e = ...\n",
+    "q3e"
    ]
   },
   {
@@ -137,18 +223,52 @@
    "id": "db3e7252",
    "metadata": {},
    "source": [
-    "### Problem 4"
+    "### Problem 4\n",
+    "\n",
+    "(a) What four financial statements can be found in a firm's 10-K filing? List them below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aaff3f28",
+   "metadata": {},
+   "source": [
+    "*replace this text*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc38135e",
+   "metadata": {},
+   "source": [
+    "(b) What checks are there on the accuracy of these statements? Select the best choice below.\n",
+    "<br/>\n",
+    "\n",
+    "1. The accuracy of the firm’s financial statements is certified by the firm’s board of\n",
+    "directors, which is the only required check.\n",
+    "<br/>\n",
+    "2. Financial statements in form 10-K are required to be audited by a\n",
+    "neutral third party, who checks them and ensures that the financial\n",
+    "statements are prepared according to GAAP and that the information\n",
+    "contained is reliable.\n",
+    "<br/>\n",
+    "3. It is up to each investor to certify the accuracy of the financial statements.\n",
+    "<br/>\n",
+    "4. Financial statements are always sufficiently accurate so no checks are needed.\n",
+    "<br/>\n",
+    "\n",
+    "**Note:** Your answer should look like `q4b = 1`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ca11c0e8",
+   "execution_count": null,
+   "id": "f9b07e8f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q4b = ...\n",
+    "q4b"
    ]
   },
   {
@@ -265,7 +385,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -279,7 +399,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "4dbb7e57341e5407654686349200712733e22bdd205a518b2f54ead6a7867df8"
+   }
   }
  },
  "nbformat": 4,
