--- a/IEOR120-Homework2.ipynb
+++ b/IEOR120-Homework2.ipynb
@@ -40,14 +40,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "72c1707c",
+   "metadata": {},
+   "source": [
+    "Honda Motor Company is considering offering a $\\$3000$ rebate on its minivan lowering the\n",
+    "vehicle’s price from $\\$30,000$ to $\\$27,000$. The marketing group estimates that this rebate will\n",
+    "increase sales over the next year from 40,000 to 60,000 vehicles. Suppose Honda’s profit\n",
+    "margin with the rebate is $\\$5000$ per vehicle. If the change in sales is the only consequence\n",
+    "of this decision:\n",
+    "\n",
+    "(a) What are the benefits of the decision?\n",
+    "\n",
+    "Assign `q1a` to your answer to (a)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "47070596",
+   "execution_count": null,
+   "id": "75d0cdaa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q1a = ..\n",
+    "q1a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "647a2a91",
+   "metadata": {},
+   "source": [
+    "(b) What are the costs of the decision?\n",
+    "\n",
+    "Assign `q1b` to your answer (b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fdfeff7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q1b = ...\n",
+    "q1b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "618035af",
+   "metadata": {},
+   "source": [
+    "(c) Offering the rebate is a ___ idea. \n",
+    "\n",
+    "    A. good\n",
+    "    B. bad\n",
+    "\n",
+    "Assign `q1c` to 'A' or 'B'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdff9b04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q1c = ...\n",
+    "q1c"
    ]
   },
   {
@@ -59,14 +121,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c4b9a6a2",
+   "metadata": {},
+   "source": [
+    "You are an international shrimp trader. A food producer in the Czech Republic offers to pay\n",
+    "you $2.5$ million Czech koruna today in exchange for a year’s supply of frozen shrimp. Your\n",
+    "Thai supplier will provide the same supply for $3.0$ million Thai baht today. The current\n",
+    "competitive market exchange rates are $20.00$ koruna per dollar and $33.25$ baht per dollar.\n",
+    "(Round to the nearest cent)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85836c50",
+   "metadata": {},
+   "source": [
+    "(a) What is the Czech buyer’s offer?\n",
+    "\n",
+    "Assign `q2a` to your answer to (a)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "eae9ff64",
+   "execution_count": null,
+   "id": "9de4ffb6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q2a = ...\n",
+    "q2a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27ddb539",
+   "metadata": {},
+   "source": [
+    "(b) What is the Thai supplier’s offer?\n",
+    "\n",
+    "Assign `q2b` to your answer to (b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38df7ae6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q2b = ...\n",
+    "q2b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a452fd2",
+   "metadata": {},
+   "source": [
+    "(c) What is the value of the deal today?\n",
+    "\n",
+    "Assign `q2c` to your answer to (c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8543211",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q2c = ...\n",
+    "q2c"
    ]
   },
   {
