--- a/IEOR120-Homework2.ipynb
+++ b/IEOR120-Homework2.ipynb
@@ -201,7 +201,7 @@
    "metadata": {},
    "source": [
     "### Problem 3\n",
-    "Your company's stock is currently trading for $ $50$ per share. Suppose your manager offers you a choice between a $ $4100$ bonus and $250$ shares of the company stock to be awarded to you today. You may ignore transaction costs.\n",
+    "Your company's stock is currently trading for $\\$50$ per share. Suppose your manager offers you a choice between a $ \\$4100$ bonus and $ \\$250$ shares of the company stock to be awarded to you today. You may ignore transaction costs.\n",
     "\n",
     "(a) Suppose that if you receive the stock bonus, you are free to trade it immediately. What is the value of the stock bonus, and which should you select?"
    ]
