formatting fixes on q3, q4
formatting fixes on q3, q4

--- a/IEOR120-Homework2.ipynb
+++ b/IEOR120-Homework2.ipynb
@@ -273,7 +273,7 @@
    "metadata": {},
    "source": [
     "### Problem 4\n",
-    "Your firm has a risk-free investment opportunity where it can invest $ $160,000$ today and receive $ $175,000$ in one year. The project will be attractive when the interest rate is (less/greater) than or equal to _______ $\\%$. (Round to two decimal places)"
+    "Your firm has a risk-free investment opportunity where it can invest $\\$160,000$ today and receive $\\$175,000$ in one year. The project will be attractive when the interest rate is (less/greater) than or equal to _______ $\\%$. (Round to two decimal places)"
    ]
   },
   {
