--- a/IEOR120-Homework3.ipynb
+++ b/IEOR120-Homework3.ipynb
@@ -40,14 +40,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "47070596",
+   "cell_type": "markdown",
+   "id": "913576bd",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "You have just taken out a five-year loan from a bank to buy an engagement ring. The ring\n",
+    "costs $\\$8000$.You plan to put down $\\$3,000$ and borrow $\\$5,000$. You will need to make\n",
+    "annual payments of $\\$1,100$ at the end of each year. Show the timeline of the loan from your perspective. How would the timeline differ if you created it from the banks perspective?\n",
+    "Show the timeline from both these perspectives."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "568d2944",
+   "metadata": {},
+   "source": [
+    "_Type your answer here, replacing this text._"
    ]
   },
   {
@@ -59,14 +67,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e4189868",
+   "metadata": {},
+   "source": [
+    "Suppose Bank One offers a risk-free interest rate of 8.0% on both savings and loans and\n",
+    "Bank Enn offers a risk-free interest rate of 7.5% on both savings and loans.\n",
+    "\n",
+    "(a) What arbitrage opportunity is available? Select one.\n",
+    "\n",
+    "\n",
+    "   A. Take a loan from Bank Enn at 7.5% and save the money in Bank One\n",
+    "at 8.0%.\n",
+    "\n",
+    "   B. Take a loan from Bank One at 8.0% and save the money in Bank Enn at 7.5%.\n",
+    "   \n",
+    "   C. Take a loan from Bank One at 7.5% and save the money in Bank One at 8.0%.\n",
+    "   \n",
+    "   D. Save at both banks.\n",
+    "   \n",
+    " Assign `q2a` to the letter of your answer."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "eae9ff64",
+   "execution_count": null,
+   "id": "4fb9bb9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q2a = ...\n",
+    "q2a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b3d487b",
+   "metadata": {},
+   "source": [
+    "(b) Which bank would experience a surge in demand for loans? Which bank would expe-\n",
+    "rience a surge in deposits? Select one.\n",
+    "\n",
+    "   A. Bank One would experience a surge in the demand for loans, while Bank Enn.\n",
+    "   \n",
+    "   B. Bank One would experience a surge in deposits, while Bank Enn would\n",
+    "receive a surge in loans.\n",
+    "\n",
+    "   C. Bank One would experience a surge in the demand for deposits, as will Bank Enn.\n",
+    "   \n",
+    "   D. Bank One would experience a surge in the demand for loans, as will Bank Enn.\n",
+    "  \n",
+    " Assign `q2b` to the letter of your answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f5ab4f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q2b = ...\n",
+    "q2b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef90b9d0",
+   "metadata": {},
+   "source": [
+    "(c) What would you expect to happen to the interest rates the two banks are offering?\n",
+    "Select one.\n",
+    "\n",
+    "   A. Both banks would increase their interest rates.\n",
+    "   \n",
+    "   B. Bank One would increase its loan rate, and/or Bank Enn would decrease its\n",
+    "savings rate.\n",
+    "\n",
+    "   C. Bank One would decrease their interest rates, and Bank Enn would\n",
+    "increase its rates.\n",
+    "\n",
+    "   D. Both banks would decrease their interest rates.\n",
+    "   \n",
+    " Assign `q2c` to the letter of your answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15760432",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q2c = ...\n",
+    "q2c"
    ]
   },
   {
