Diego push on Hw's

--- a/IEOR120-Homework1.ipynb
+++ b/IEOR120-Homework1.ipynb
@@ -334,14 +334,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3d42fdcd",
+   "metadata": {},
+   "source": [
+    "You have decided to form a new start-up company developing applications for the iPhone.\n",
+    "Match the three distinct types of financial decisions you have to make to each scenario.\n",
+    "<br>\n",
+    "><b>Hint:</b> choose from cash management decision, financing decision, investment decision\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e76570f9",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "(a) Determining which type of iPhone application projects will offer your company a positive net present value, and therefore are the types of projects your company should develop.</br>\n",
+    "<br>\n",
+    "(b) Determining how to fund your iPhone application investments and what mix of debt and equity your company will have.</br>\n",
+    "<br>\n",
+    "(c) Ensuring that the company has the necessary funds to make investments, pay interest on loans, and pay your employees.</br>\n",
+    "<br>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "b1476930",
+   "execution_count": null,
+   "id": "02e00db5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "answer_a = ...\n",
+    "answer_b = ...\n",
+    "answer_c = ..."
    ]
   },
   {
@@ -353,14 +379,63 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "572c1f2d",
+   "cell_type": "markdown",
+   "id": "f67bdfae",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "Considering the following potential events that might have occurred to Global Conglomerate on December 30, 2018. For each one, circle how line items in Global’s balance sheet would be affected (increase, decrease, or not change) and by how much. Also indicate the change to Global’s book value of equity."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fbbd251",
+   "metadata": {},
+   "source": [
+    "(a) Global used $17 million of its available cash to repay $17 million of its long-term debt."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d65c8be1",
+   "metadata": {},
+   "source": [
+    "(b) A warehouse fire destroyed $4 million worth of uninsured inventory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1b748e3",
+   "metadata": {},
+   "source": [
+    "(c) Global used $6 million in cash and $2 million in new long-term debt to purchase a $8\n",
+    "million building."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a2f778f",
+   "metadata": {},
+   "source": [
+    "(d) A large customer owing $3 million for products it already received declared bankruptcy,\n",
+    "leaving no possibility that Global would ever receive payment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4f410cc",
+   "metadata": {},
+   "source": [
+    "(e) Global’s engineers discover a new manufacturing process that will cut the cost of its\n",
+    "flagship product by over 50%. Select one."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17f24f7b",
+   "metadata": {},
+   "source": [
+    "(f) A key competitor announces a radical new pricing policy that will drastically undercut\n",
+    "Global’s prices. Select one."
    ]
   },
   {
@@ -385,7 +460,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -399,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
