--- a/IEOR120-Homework2.ipynb
+++ b/IEOR120-Homework2.ipynb
@@ -336,14 +336,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f63390d",
+   "metadata": {},
+   "source": [
+    "Your computer manufacturing firm must purchase 10,000 keyboards from a supplier. One\n",
+    "supplier demands a payment of <b>120,000 dollars</b> today plus <b>10 dollars</b> per keyboard payable in one year. Another supplier will charge <b>25 dollars</b> per keyboard, also payable in one year. The risk-free interest rate is <b>10%</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e67bcce",
+   "metadata": {},
+   "source": [
+    "(a) The difference in their offers in terms of dollars today is"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "74eb69fa",
+   "execution_count": 1,
+   "id": "e11e3963",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "# Write your code and record your solution \n",
+    "result_a = ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6afef50",
+   "metadata": {},
+   "source": [
+    "(b) Your firm should take Supplier (One/Two). (Circle one)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "febcd1bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "option_b = ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "092ddeb1",
+   "metadata": {},
+   "source": [
+    "(c) Suppose your firm does not want to spend cash today. How can it take the first offer\n",
+    "and not spend <b>120,000 dollars</b> of its own cash today?\n",
+    "><br>\n",
+    "(i) It can’t\n",
+    "<br>\n",
+    "(ii) It can try to negotiate\n",
+    "<br>\n",
+    "(iii) It can borrow the required payment today at 10%\n",
+    "<br>\n",
+    "(iv) It can borrow the required payment today at 9%\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2f85c373",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "option_c = ..."
    ]
   },
   {
