--- a/IEOR120-Homework3.ipynb
+++ b/IEOR120-Homework3.ipynb
@@ -248,14 +248,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "74eb69fa",
+   "cell_type": "markdown",
+   "id": "f0a74d5a",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "Consider the following alternatives:\n",
+    "><br>(i) <b>100 dollars</b> received in 4 year\n",
+    "<br>\n",
+    "(ii) <b>200 dollars</b> received in 8 years\n",
+    "<br>\n",
+    "(iii) <b>310 dollars</b> received in 16 years"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8dccfdd",
+   "metadata": {},
+   "source": [
+    "(a) Rank the alternatives from most valuable to least valuable if the interest rate is 10%\n",
+    "per year."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c62c0b6",
+   "metadata": {},
+   "source": [
+    "(b) What is your ranking if the interest rate is 5% per year?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40790dd5",
+   "metadata": {},
+   "source": [
+    "(c) What is your ranking if the interest rate is 20% per year?"
    ]
   },
   {
