--- a/IEOR120-Homework4.ipynb
+++ b/IEOR120-Homework4.ipynb
@@ -40,14 +40,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7bd5a84",
+   "metadata": {},
+   "source": [
+    "You have been offered a unique investment opportunity. If you invest $\\$10,000$ today,\n",
+    "you will receive $\\$1,000$ one year from now, $\\$1,500$ two years from now, and $\\$12,000$\n",
+    "ten years from now.\n",
+    "\n",
+    "(a) What is the NPV of the opportunity if the interest rate is 6\\% per year?\n",
+    "\n",
+    "Assign `q1a_1` to your answer."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "47070596",
+   "execution_count": null,
+   "id": "66bff4f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q1a_1 = ...\n",
+    "q1a_1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b31d06ad",
+   "metadata": {},
+   "source": [
+    "Should you take the deal? \n",
+    "\n",
+    "A. Yes\n",
+    "\n",
+    "B. No\n",
+    "\n",
+    "Assign `q1a_2` to your answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3846176",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q1a_2 = ...\n",
+    "q1a_2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ddf5017",
+   "metadata": {},
+   "source": [
+    "(b) What is the NPV of the opportunity if the interest rate is 2\\% per year?\n",
+    "\n",
+    "Assign `q1b_1` to your answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49e649d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q1b_1 = ...\n",
+    "q1b_1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09f597b0",
+   "metadata": {},
+   "source": [
+    "Should you take the deal? \n",
+    "\n",
+    "A. Yes\n",
+    "\n",
+    "B. No\n",
+    "\n",
+    "Assign `q1b_2` to your answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "0fe7cea5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q1b_2 = ...\n",
+    "q1b_2"
    ]
   },
   {
@@ -59,14 +155,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3ce6e0df",
+   "metadata": {},
+   "source": [
+    "When you purchased your house, you took out a 35-year annual payment mortgage with\n",
+    "an interest rate of $10\\%$ per year. The annual payment on the mortgage is $\\$12,500$. You\n",
+    "have just made a payment and have now decided to pay the mortgage off by repaying the\n",
+    "outstanding balance. What is the payoff amount if:\n",
+    "\n",
+    "(a) You have lived in the house for 15 years? (So there are 15 years left of the mortgage)\n",
+    "\n",
+    "Assign `q2a` to your answer."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "eae9ff64",
+   "execution_count": null,
+   "id": "62247e88",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q2a = ...\n",
+    "q2a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae45cf60",
+   "metadata": {},
+   "source": [
+    "(b) You have lived in the house for 19 years? (So there are 11 years left on the mortgage)\n",
+    "\n",
+    "Assign `q2b` to your answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e0a918f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q2b = ...\n",
+    "q2b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4353c424",
+   "metadata": {},
+   "source": [
+    "(c) You have lived in the house for 15 years and you decide to pay off the mortgage\n",
+    "immediately before the 15th payment is due?\n",
+    "\n",
+    "Assign `q2c` to your answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dafa69e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q2c = ...\n",
+    "q2c"
    ]
   },
   {
