added 3/4 on hw 3 and hw4
added 3/4 on hw 3 and hw4
hw3 q4 needs image imbed still.

--- a/IEOR120-Homework3.ipynb
+++ b/IEOR120-Homework3.ipynb
@@ -164,11 +164,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee3f94ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "c25f51d7",
    "metadata": {},
    "source": [
-    "### Problem 3"
+    "### Problem 3\n",
+    "\n",
+    "You have just received a windfall from an investment you made in a friend's business. He will be paying you $ \\$ 22,866$ at the end of the year, $ \\$ 50,732$ at the end of the following year, and $ \\$ 73,598$ at the end of the year after that (three years from today). The interest rate is $2.75 \\%$ per year.\n",
+    "\n",
+    "(a) What is the present value of your windfall?"
    ]
   },
   {
@@ -178,8 +190,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q3a = ...\n",
+    "q3a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccd08686",
+   "metadata": {},
+   "source": [
+    "(b) What is the future value of your windfall in three years (on the date of the last pay-ment)? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96157e6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q3b = ...\n",
+    "q3b"
    ]
   },
   {
@@ -187,18 +218,98 @@
    "id": "13e9985e",
    "metadata": {},
    "source": [
-    "### Problem 4"
+    "### Problem 4\n",
+    "\n",
+    "The Xia Corporation is a company whose sole assets are $\\$100,000$ in cash and three projects\n",
+    "that it will undertake. The projects are risk-free and have the following cash flows. Xia\n",
+    "plans to invest any unused cash today at the risk-free interest rate of $12.2\\%$. In one year, all\n",
+    "cash will be paid to investors and the company will be shut down.\n",
+    "\n",
+    "(a) What is the NPV of each project? What projects should Xia undertake and how much cash should it retain?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ae71e860",
+   "execution_count": null,
+   "id": "f0c4b948",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q4a = ...\n",
+    "q4a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8147f920",
+   "metadata": {},
+   "source": [
+    "(b) What is the total value of Xia's assets (projects and cash) today?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9208069d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q4b = ...\n",
+    "q4b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0134ffec",
+   "metadata": {},
+   "source": [
+    "(c) What cash flows will the investors in Xia receive? Based on these cash flows, what is the value of Xia today?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1c4f22e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q4c = ...\n",
+    "q4c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72f3ee76",
+   "metadata": {},
+   "source": [
+    "(d) Suppose Xia pays any unused cash to investors today, rather than investing it. What are the cash flows to investors in this case? Based on these cash flows, what is the value of Xia today?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fd389f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q4d = ...\n",
+    "q4d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b63e9c4",
+   "metadata": {},
+   "source": [
+    "(e) Explain the relationship between your answers in (b), (c), and (d)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4dd0cb4",
+   "metadata": {},
+   "source": [
+    "_Type your answer here, replacing this text._"
    ]
   },
   {
@@ -208,6 +319,12 @@
    "source": [
     "### Problem 5"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a54188ec",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
