--- a/IEOR120-Homework4.ipynb
+++ b/IEOR120-Homework4.ipynb
@@ -228,7 +228,9 @@
    "id": "c25f51d7",
    "metadata": {},
    "source": [
-    "### Problem 3"
+    "### Problem 3\n",
+    "\n",
+    "You work for a pharmaceutical company that has developed a new drug. The patent on the drug will last $20$ years. You expect that the drug's profits will be $\\$1.5$ million in its first year and this amount will grow at a rate of $5\\%$ per year for the next $19$ years. Once the patent expires, other pharmaceutical companies will be able to produce the same drug and competition will likely drive profits to zero. What is the present value of the new drug if the interest rate is $8\\%$ per year?"
    ]
   },
   {
@@ -238,8 +240,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q3 = ...\n",
+    "q3"
    ]
   },
   {
@@ -247,7 +249,8 @@
    "id": "13e9985e",
    "metadata": {},
    "source": [
-    "### Problem 4"
+    "### Problem 4\n",
+    "Suppose you currently have $\\$10,000$ in your savings account, and your bank pays interest at a rate of $0$.$1\\%$ per month. If you make no further deposits or withdrawals, how much will you have in the account in $17$ years?"
    ]
   },
   {
@@ -257,8 +260,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q4 = ...\n",
+    "q4"
    ]
   },
   {
