--- a/IEOR120-Homework2.ipynb
+++ b/IEOR120-Homework2.ipynb
@@ -21,6 +21,8 @@
     "- Lecture 5: Arbitrage and The Law of One Price\n",
     "- Sections 3.1 - 3.3, 3.4 - 3.5\n",
     "\n",
+    "Answers are in dollars ($) unless otherwise specified.\n",
+    "\n",
     "Partial credit will be awarded for both logic and effort. \\\n",
     "*Grading will be completed via Gradescope.*\n",
     "\n",
@@ -44,16 +46,17 @@
    "id": "72c1707c",
    "metadata": {},
    "source": [
-    "Honda Motor Company is considering offering a $\\$3000$ rebate on its minivan lowering the\n",
-    "vehicle’s price from $\\$30,000$ to $\\$27,000$. The marketing group estimates that this rebate will\n",
-    "increase sales over the next year from 40,000 to 60,000 vehicles. Suppose Honda’s profit\n",
-    "margin with the rebate is $\\$5000$ per vehicle. If the change in sales is the only consequence\n",
-    "of this decision:\n",
+    "Honda Motor Company is considering offering a $\\$3000$ rebate on its minivan lowering the vehicle’s price from $\\$30,000$ to $\\$27,000$. The marketing group estimates that this rebate will increase sales over the next year from 40,000 to 60,000 vehicles. Suppose Honda’s profit margin with the rebate is $\\$5000$ per vehicle. If the change in sales is the only consequence of this decision:\n",
     "\n",
-    "(a) What are the benefits of the decision?\n",
-    "\n",
-    "Assign `q1a` to your answer to (a)\n",
-    "\n"
+    "**Note:** Assign `q1a` and `q1b` to your numeric answers. They should be in the millions. Ex: `q1a = 10`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09a847f1",
+   "metadata": {},
+   "source": [
+    "(a) What are the benefits of the decision? (in millions)"
    ]
   },
   {
@@ -63,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q1a = ..\n",
+    "q1a = ...\n",
     "q1a"
    ]
   },
@@ -72,9 +75,7 @@
    "id": "647a2a91",
    "metadata": {},
    "source": [
-    "(b) What are the costs of the decision?\n",
-    "\n",
-    "Assign `q1b` to your answer (b)"
+    "(b) What are the costs of the decision? (in millions)"
    ]
   },
   {
@@ -93,12 +94,12 @@
    "id": "618035af",
    "metadata": {},
    "source": [
-    "(c) Offering the rebate is a ___ idea. \n",
+    "(c) Offering the rebate is a _________ idea. \n",
     "\n",
-    "    A. good\n",
-    "    B. bad\n",
+    "    1. Good\n",
+    "    2. Bad\n",
     "\n",
-    "Assign `q1c` to 'A' or 'B'"
+    "**Note:** Assign `q1c` to your answer. Ex: `q1c = 1`."
    ]
   },
   {
@@ -129,7 +130,10 @@
     "you $2.5$ million Czech koruna today in exchange for a year’s supply of frozen shrimp. Your\n",
     "Thai supplier will provide the same supply for $3.0$ million Thai baht today. The current\n",
     "competitive market exchange rates are $20.00$ koruna per dollar and $33.25$ baht per dollar.\n",
-    "(Round to the nearest cent)"
+    "(Round to the nearest cent)\n",
+    "\n",
+    "\n",
+    "**Note:** Assign each variable to an answer. Ex: `q2a = 5,000`."
    ]
   },
   {
@@ -137,9 +141,7 @@
    "id": "85836c50",
    "metadata": {},
    "source": [
-    "(a) What is the Czech buyer’s offer?\n",
-    "\n",
-    "Assign `q2a` to your answer to (a)"
+    "(a) What is the Czech buyer’s offer?"
    ]
   },
   {
@@ -158,9 +160,7 @@
    "id": "27ddb539",
    "metadata": {},
    "source": [
-    "(b) What is the Thai supplier’s offer?\n",
-    "\n",
-    "Assign `q2b` to your answer to (b)"
+    "(b) What is the Thai supplier’s offer?"
    ]
   },
   {
@@ -179,9 +179,7 @@
    "id": "0a452fd2",
    "metadata": {},
    "source": [
-    "(c) What is the value of the deal today?\n",
-    "\n",
-    "Assign `q2c` to your answer to (c)"
+    "(c) What is the value of the deal today?"
    ]
   },
   {
@@ -201,22 +199,47 @@
    "metadata": {},
    "source": [
     "### Problem 3\n",
-    "Your company's stock is currently trading for $\\$50$ per share. Suppose your manager offers you a choice between a $ \\$4100$ bonus and $ \\$250$ shares of the company stock to be awarded to you today. You may ignore transaction costs.\n",
+    "Your company's stock is currently trading for $\\$50$ per share. Suppose your manager offers you a choice between a $ \\$4100$ bonus and 250 shares of the company stock to be awarded to you today. You may ignore transaction costs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d766a44",
+   "metadata": {},
+   "source": [
+    "(a) Suppose that if you receive the stock bonus, you are free to trade it immediately. What is the value of the stock bonus and which bonus **(Cash / Stock)** should you choose?\n",
     "\n",
-    "(a) Suppose that if you receive the stock bonus, you are free to trade it immediately. What is the value of the stock bonus, and which should you select?"
+    "**Note:** Format your answer like `q3a_1 = 1000`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a07970b",
+   "id": "4c80687b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#What is the value of the stock bonus?\n",
-    "q3a1 = ...\n",
-    "#So you should choose ('cash'/'stock') bonus?\n",
-    "q3a2 = ..."
+    "q3a_1 = ...\n",
+    "q3a_1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e835052",
+   "metadata": {},
+   "source": [
+    "**Note:** Assign your answer as `q3a_2 = 'Cash'` or `q3a_2 = 'Stock'`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4ee33a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q3a_2 = ...\n",
+    "q3a_2"
    ]
   },
   {
@@ -224,24 +247,36 @@
    "id": "1d39df08",
    "metadata": {},
    "source": [
-    "(b) Suppose instead that if you receive the stock bonus, you are required to hold it for at least one year before selling it. What can you say about the value of the stock bonus now?Select one. \n",
+    "(b) Suppose instead that if you receive the stock bonus, you are required to hold it for at least one year before selling it. What can you say about the value of the stock bonus now? **Select one.**\n",
     "\n",
     "1. Same as part (a)\n",
     "2. The stock bonus cannot be worth more than the value calculated in part (a), so you prefer the cash bonus.\n",
     "3. The stock bonus is worth more than the value calculated in part (a), so you still prefer the stock bonus.\n",
     "4. You cannot make a definite decision, but the stock bonus is likely not worth as much as the value calculated in part (a).\n",
     "\n",
-    "Assign `q3b` to value `1, 2, 3` or `4`."
+    "**Note:** Format your answer like `q3b = 1`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "606e4e2a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "q3b = ..."
+    "q3b = ...\n",
+    "q3b"
    ]
   },
   {
@@ -249,12 +284,14 @@
    "id": "aaad33a2",
    "metadata": {},
    "source": [
-    "(c) What will your decision depend on? Select one.\n",
+    "(c) What will your decision depend on? **Select one.**\n",
+    "\n",
     "1. The type of bonus your employer prefers.\n",
     "2. The market value of the stock today.\n",
     "3. The stock’s potential value in one year along with the risk involved.\n",
     "4. How well the company’s stock has done in the past year.\n",
-    "Assign `q3c` to value `1, 2, 3` or `4`"
+    "\n",
+    "**Note:** Format your answer like `q3c = 1`."
    ]
   },
   {
@@ -264,7 +301,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q3c = ..."
+    "q3c = ...\n",
+    "a3c"
    ]
   },
   {
@@ -273,20 +311,40 @@
    "metadata": {},
    "source": [
     "### Problem 4\n",
-    "Your firm has a risk-free investment opportunity where it can invest $\\$160,000$ today and receive $\\$175,000$ in one year. The project will be attractive when the interest rate is (less/greater) than or equal to _______ $\\%$. (Round to two decimal places)"
+    "Your firm has a risk-free investment opportunity where it can invest $\\$160,000$ today and receive $\\$175,000$ in one year. The project will be attractive when the interest rate is **(Less / Greater)** than or equal to _________$\\%$. (Round to two decimal places)\n",
+    "\n",
+    "**Note:** Assign your answer on the more attractive relative interest rate to `q4_2`.\n",
+    "Format your answer as `q4_2 = 'Less'` or `q4_2 = 'Greater'`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae71e860",
+   "id": "f0d881a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#assign q4a to 'less' or 'greater'\n",
-    "q4a = ...\n",
-    "#assign q4b to a two decimal place float (do not include the % sign)\n",
-    "q4b = ..."
+    "q4_1 = ...\n",
+    "q4_1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51dcddb7",
+   "metadata": {},
+   "source": [
+    "**Note:** Your answer should be a percentage between 0 and 100 *excluding* the $\\%$ sign. Format your answer like `q3a_1 = 50.00`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71a33297",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q4_2 = ...\n",
+    "q4_2"
    ]
   },
   {
@@ -340,8 +398,7 @@
    "id": "3f63390d",
    "metadata": {},
    "source": [
-    "Your computer manufacturing firm must purchase 10,000 keyboards from a supplier. One\n",
-    "supplier demands a payment of <b>120,000 dollars</b> today plus <b>10 dollars</b> per keyboard payable in one year. Another supplier will charge <b>25 dollars</b> per keyboard, also payable in one year. The risk-free interest rate is <b>10%</b>"
+    "Your computer manufacturing firm must purchase 10,000 keyboards from a supplier. One supplier demands a payment of $\\$120,000$ dollars today plus $\\$10$ dollars per keyboard payable in one year. Another supplier will charge $\\$25$ dollars per keyboard, also payable in one year. The risk-free interest rate is $10\\%$."
    ]
   },
   {
@@ -349,7 +406,9 @@
    "id": "3e67bcce",
    "metadata": {},
    "source": [
-    "(a) The difference in their offers in terms of dollars today is"
+    "(a) What is the difference in their offers in terms of dollars today?\n",
+    "\n",
+    "**Note:** Format your answer like `q7a = 1000`."
    ]
   },
   {
@@ -359,8 +418,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code and record your solution \n",
-    "result_a = ..."
+    "q7a = ...\n",
+    "q7a"
    ]
   },
   {
@@ -368,7 +427,9 @@
    "id": "e6afef50",
    "metadata": {},
    "source": [
-    "(b) Your firm should take Supplier (One/Two). (Circle one)."
+    "(b) Which Supplier's offer should your firm take? One or Two?\n",
+    "\n",
+    "**Note:** Assign your answer as `q7b = 'One'` or `q7b = 'Two'`."
    ]
   },
   {
@@ -378,35 +439,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "option_b = ..."
+    "q7b = ...\n",
+    "q7b"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "092ddeb1",
+   "id": "debdbfff",
    "metadata": {},
    "source": [
-    "(c) Suppose your firm does not want to spend cash today. How can it take the first offer\n",
-    "and not spend <b>120,000 dollars</b> of its own cash today?\n",
-    "><br>\n",
-    "(i) It can’t\n",
-    "<br>\n",
-    "(ii) It can try to negotiate\n",
-    "<br>\n",
-    "(iii) It can borrow the required payment today at 10%\n",
-    "<br>\n",
-    "(iv) It can borrow the required payment today at 9%\n",
-    "<br>"
+    "(c) Suppose your firm does not want to spend cash today. How can it take the first offer and not spend $\\$120,000$ of its own cash today? **Select one.**\n",
+    "\n",
+    "1. It can’t\n",
+    "2. It can try to negotiate\n",
+    "3. It can borrow the required payment today at $10\\%$.\n",
+    "4. It can borrow the required payment today at $9\\%$.\n",
+    "\n",
+    "**Note:** Format your answer like `q7c = 1`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "2f85c373",
+   "execution_count": null,
+   "id": "5e660028",
    "metadata": {},
    "outputs": [],
    "source": [
-    "option_c = ..."
+    "q7c = ...\n",
+    "q7c"
    ]
   },
   {
@@ -418,14 +478,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "f19be1e0",
+   "cell_type": "markdown",
+   "id": "b2c7f8fd",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "Directions: For this problem, choose a topic covered during for this problem set “period”, design a question, and then solve it. The question and solution must be written by you and be uniquely yours.\n",
+    "\n",
+    "However, you may use the textbook, the class material, the internet, or any other resource you want for inspiration. Make sure you cite your inspirational sources or declare that there are none.\n",
+    "\n",
+    "Required Components:\n",
+    "- Inspiration statement\n",
+    "- Question\n",
+    "- Statement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fa6a8e9",
+   "metadata": {},
+   "source": [
+    "*Double click to edit!*"
    ]
   }
  ],
