--- a/IEOR120-Homework5.ipynb
+++ b/IEOR120-Homework5.ipynb
@@ -40,14 +40,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "efc6ea6d",
+   "metadata": {},
+   "source": [
+    "Suppose you invest $\\$105$ in a bank account, and five years later it has grown to $\\$135.09$.\n",
+    "\n",
+    "(a) What APR did you receive, if the interest was compounded semiannually?\n",
+    "\n",
+    "First, calculate EAR."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "47070596",
+   "execution_count": null,
+   "id": "6240f31d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q1a_EAR = ...\n",
+    "q1a_EAR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd842df7",
+   "metadata": {},
+   "source": [
+    "Assign `q1a_APR` to your final answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce7fcea8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q1a_APR = ...\n",
+    "q1a_APR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4d021f8",
+   "metadata": {},
+   "source": [
+    "(b) What APR did you receive if the interest was compounded monthly?\n",
+    "\n",
+    "Assign `q1b` to your answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b291a9e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q1b = ...\n",
+    "q1b"
    ]
   },
   {
@@ -59,14 +111,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "89ffa1c8",
+   "metadata": {},
+   "source": [
+    "Bank of the West is advertising a 60-month, 6.18% APR auto loan. If you need to borrow\n",
+    "$7,000 to purchase your dream Tesla, what will your monthly payment be?\n",
+    "\n",
+    "First, find the discount rate."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "eae9ff64",
+   "execution_count": null,
+   "id": "f8ae0e07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q2_discount = ...\n",
+    "q2_discount"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d706e0a",
+   "metadata": {},
+   "source": [
+    "Now, calculate the monthly payment. \n",
+    "\n",
+    "Assign `q2` to your final answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c607c815",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q2 = ...\n",
+    "q2"
    ]
   },
   {
