--- a/IEOR120-Homework4.ipynb
+++ b/IEOR120-Homework4.ipynb
@@ -230,7 +230,7 @@
    "source": [
     "### Problem 3\n",
     "\n",
-    "You work for a pharmaceutical company that has developed a new drug. The patent on the drug will last $20$ years. You expect that the drug's profits will be $\\$1.5$ million in its first year and this amount will grow at a rate of $5\\%$ per year for the next $19$ years. Once the patent expires, other pharmaceutical companies will be able to produce the same drug and competition will likely drive profits to zero. What is the present value of the new drug if the interest rate is $8\\%$ per year?"
+    "You work for a pharmaceutical company that has developed a new drug. The patent on the drug will last $20$ years. You expect that the drug's profits will be $\\$1.5$ million in its first year and this amount will grow at a rate of $5\\%$ per year for the next $19$ years. Once the patent expires, other pharmaceutical companies will be able to produce the same drug and competition will likely drive profits to zero. What is the present value of the new drug if the interest rate is $8\\%$ per year?\n"
    ]
   },
   {
