Updated Q3 on HW5
Updated Q3 on HW5

--- a/IEOR120-Homework5.ipynb
+++ b/IEOR120-Homework5.ipynb
@@ -159,7 +159,9 @@
    "source": [
     "### Problem 3\n",
     "\n",
-    "You have decided to refinance your mortgage. You plan to borrow whatever is outstanding on your current mortgage. The current monthly payment is $\\$2,609$ and you have made every payment on time. The original term of the mortgage was $30$ years, and the mortgage is exactly four years and eight months old. You have just made your monthly payment. The mortgage interest rate is $6.767\\%$ (APR) - how much do you owe on the mortgage today?"
+    "You have decided to refinance your mortgage. You plan to borrow whatever is outstanding on your current mortgage. The current monthly payment is $\\$2,609$ and you have made every payment on time. The original term of the mortgage was $30$ years, and the mortgage is exactly four years and eight months old. You have just made your monthly payment. The mortgage interest rate is $6.767\\%$ (APR) - how much do you owe on the mortgage today?\n",
+    "\n",
+    "First find the discount rate:"
    ]
   },
   {
@@ -169,8 +171,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q3 = ...\n",
-    "q3"
+    "q3_r = ...\n",
+    "q3_r"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "decc60c2",
+   "metadata": {},
+   "source": [
+    "Next find the present value (how much do you owe on the mortgage today?):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b14d741b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q3_PV = ...\n",
+    "q3_PV"
    ]
   },
   {
