--- a/IEOR120-Homework2.ipynb
+++ b/IEOR120-Homework2.ipynb
@@ -61,10 +61,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "75d0cdaa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q1a = ...\n",
     "q1a"
@@ -80,10 +91,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "7fdfeff7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q1b = ...\n",
     "q1b"
@@ -104,10 +126,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "bdff9b04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q1c = ...\n",
     "q1c"
@@ -146,10 +179,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "9de4ffb6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q2a = ...\n",
     "q2a"
@@ -165,10 +209,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "38df7ae6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q2b = ...\n",
     "q2b"
@@ -184,10 +239,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "a8543211",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q2c = ...\n",
     "q2c"
@@ -214,10 +280,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "4c80687b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q3a_1 = ...\n",
     "q3a_1"
@@ -233,10 +310,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "b4ee33a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q3a_2 = ...\n",
     "q3a_2"
@@ -259,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "id": "606e4e2a",
    "metadata": {},
    "outputs": [
@@ -269,7 +357,7 @@
        "Ellipsis"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,13 +384,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "470abdeb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q3c = ...\n",
-    "a3c"
+    "q3c"
    ]
   },
   {
@@ -319,10 +418,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "f0d881a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q4_1 = ...\n",
     "q4_1"
@@ -338,10 +448,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "71a33297",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q4_2 = ...\n",
     "q4_2"
@@ -356,33 +477,165 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "617e4509",
+   "cell_type": "markdown",
+   "id": "0d32f635",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "Your construction firm has just won a contract to build a financial o\n",
+    "\n",
+    "ce building. Building it\n",
+    "will take one year and require an investment of $\\$11$ million today and $\\$6$ million in one year.\n",
+    "The financial company will pay you $\\$25$ million upon the building’s completion. Suppose\n",
+    "the cash flows and their times of payment are certain, and the risk-free interest rate is 10%.\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1b23ddc0",
+   "id": "9e63611a",
+   "metadata": {},
+   "source": [
+    "(a) The NPV of this opportunity is $\\$$ ________________ million. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "d381aa11",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q5a = ...\n",
+    "q5a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4556abc9",
+   "metadata": {},
+   "source": [
+    "(b) How can your firm turn this NPV into cash today?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b731dfcb",
+   "metadata": {},
+   "source": [
+    "The firm can borrow $\\$$ **[ANSWER HERE]** today, and pay it back with 10$\\%$ interest using the $\\$$ **[ANSWER HERE]** it will receive from the financial company. The firm can use $\\$$ **[ANSWER HERE]** of the $\\$$ **[ANSWER HERE]** to cover its costs today and save $\\$$ **[ANSWER HERE]** in the bank to earn 11$\\%$ interest to cover its cost of $\\$$ **[ANSWER HERE]** next year. This leaves $\\$$ **[ANSWER HERE]** in cash for the firm today."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5ff628e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Ellipsis, Ellipsis, Ellipsis, Ellipsis, Ellipsis, Ellipsis]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q5b = [..., ..., ..., ..., ..., ...]\n",
+    "q5b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5c29606",
    "metadata": {},
    "source": [
     "### Problem 6"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "9c346ae7",
+   "cell_type": "markdown",
+   "id": "f5b67c2c",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "You have an investment opportunity in Japan. It requires an investment of $\\$$1 million today\n",
+    "and will produce a cash flow of ¥ 110 million in one year with no risk. Suppose the risk-free\n",
+    "interest rate in the United States is 5$\\%$, the risk-free interest rate in Japan is 4.5$\\%$, and the\n",
+    "current competitive exchange rate is ¥ 114 per $\\$$1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b587602d",
+   "metadata": {},
+   "source": [
+    "(a) The NPV of this investment is:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "217ab9e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q6a = ...\n",
+    "q6a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56c55d5c",
+   "metadata": {},
+   "source": [
+    "This investment is a (good/bad) opportunity. (Choose one)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "3caeb791",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'...'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q6b = \"...\"\n",
+    "q6b"
    ]
   },
   {
@@ -413,10 +666,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "e11e3963",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q7a = ...\n",
     "q7a"
@@ -434,10 +698,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "febcd1bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q7b = ...\n",
     "q7b"
@@ -460,10 +735,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "5e660028",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q7c = ...\n",
     "q7c"
