--- a/IEOR120-Homework2.ipynb
+++ b/IEOR120-Homework2.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "id": "470abdeb",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
        "Ellipsis"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d32f635",
+   "id": "c03e23d3",
    "metadata": {},
    "source": [
     "Your construction firm has just won a contract to build a financial o\n",
@@ -493,16 +493,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e63611a",
+   "id": "aa1afd1c",
    "metadata": {},
    "source": [
-    "(a) The NPV of this opportunity is $\\$$ ________________ million. "
+    "(a) The NPV of this opportunity is ________________ million. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "d381aa11",
+   "id": "0384a951",
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4556abc9",
+   "id": "893baf69",
    "metadata": {},
    "source": [
     "(b) How can your firm turn this NPV into cash today?"
@@ -531,16 +531,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b731dfcb",
+   "id": "85142520",
    "metadata": {},
    "source": [
-    "The firm can borrow $\\$$ **[ANSWER HERE]** today, and pay it back with 10$\\%$ interest using the $\\$$ **[ANSWER HERE]** it will receive from the financial company. The firm can use $\\$$ **[ANSWER HERE]** of the $\\$$ **[ANSWER HERE]** to cover its costs today and save $\\$$ **[ANSWER HERE]** in the bank to earn 11$\\%$ interest to cover its cost of $\\$$ **[ANSWER HERE]** next year. This leaves $\\$$ **[ANSWER HERE]** in cash for the firm today."
+    "The firm can borrow ________________ today, and pay it back with 10$\\%$ interest using the ________________ it will receive from the financial company. The firm can use ________________ of the ________________ to cover its costs today and save ________________ in the bank to earn 11$\\%$ interest to cover its cost of ________________ next year. This leaves ________________ in cash for the firm today."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "5ff628e8",
+   "id": "0f5f94ce",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5c29606",
+   "id": "6748954d",
    "metadata": {},
    "source": [
     "### Problem 6"
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5b67c2c",
+   "id": "33dfa1b1",
    "metadata": {},
    "source": [
     "You have an investment opportunity in Japan. It requires an investment of $\\$$1 million today\n",
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b587602d",
+   "id": "e6072b65",
    "metadata": {},
    "source": [
     "(a) The NPV of this investment is:"
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "217ab9e9",
+   "id": "1b23c3e4",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56c55d5c",
+   "id": "c5cea87c",
    "metadata": {},
    "source": [
     "This investment is a (good/bad) opportunity. (Choose one)"
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "3caeb791",
+   "id": "6fd06688",
    "metadata": {},
    "outputs": [
     {
