charlie hw3 push

--- a/IEOR120-Homework3.ipynb
+++ b/IEOR120-Homework3.ipynb
@@ -331,17 +331,98 @@
    "cell_type": "markdown",
    "id": "a54188ec",
    "metadata": {},
-   "source": []
+   "source": [
+    "What is the present value of $5,000 received:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fe5d1d0",
+   "metadata": {},
+   "source": [
+    "(a) 14 years from today when the interest rate is 5% per year?"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "617e4509",
+   "execution_count": 1,
+   "id": "f8a44b09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q5a = ... \n",
+    "q5a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49837492",
+   "metadata": {},
+   "source": [
+    "(b) 28 years from today when the interest rate is 2% per year?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "45812d7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q5b = ... \n",
+    "q5b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39e56d2e",
+   "metadata": {},
+   "source": [
+    "(c) 7 years from today when the interest rate is 12% per year?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "718bfe82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q5c = ... \n",
+    "q5c"
    ]
   },
   {
