--- a/IEOR120-Homework4.ipynb
+++ b/IEOR120-Homework4.ipynb
@@ -273,14 +273,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "617e4509",
+   "cell_type": "markdown",
+   "id": "ed2e39fb",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "You have decided to buy a perpetuity. The bond makes one payment at the end of every\n",
+    "year forever and has an interest rate of 5%. If the bond initially costs $\\$$3000, what is the\n",
+    "payment every year?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "350efab8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q5 = ...\n",
+    "q5"
    ]
   },
   {
@@ -292,14 +313,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d91f044",
+   "metadata": {},
+   "source": [
+    "You are thinking of purchasing a house. The house costs $\\$$450,000. You have $\\$$60,000 in cash\n",
+    "that you can use as a down payment on the house, but you need to borrow the rest of the\n",
+    "purchase price. The bank is offering a 30-year mortgage that requires annual payments and\n",
+    "has an interest rate of 5$\\%$ per year. What will be your annual payment if you sign\n",
+    "this mortgage?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "9c346ae7",
+   "execution_count": 1,
+   "id": "8fc3a88a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Double click to edit\n",
-    "# Press M on the cell to change to Markdown"
+    "q6 = ..."
    ]
   },
   {
